[package]
name = "crosec-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
nix = { version = "0.27.1", features = ["ioctl"] }
num-derive = "0.4.2"
num-traits = "0.2.18"
thiserror = "1.0.57"
