[package]
name = "crosec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.16.0", features = ["derive"] }
clap = { version = "4.5.6", optional = true }
nix = { version = "0.27.1", features = ["ioctl"] }
num = "0.4.3"
num-derive = "0.4.2"
num-traits = "0.2.18"
strum = "0.26.2"
strum_macros = "0.26.4"
thiserror = "1.0.57"

[features]
clap = ["dep:clap"]
