[package]
name = "ectool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crosec = { version = "0.1.0", path = "../crosec" }
color-eyre = "0.6.2"
clap = { version = "4.5.4", features = ["derive"] }
num-traits = "0.2.19"
bytemuck = "1.16.0"
image = "0.25.1"
